[gd_scene load_steps=19 format=3 uid="uid://c6whenmval02w"]

[ext_resource type="Texture2D" uid="uid://dyydpux4tfsiu" path="res://sprites/WaterBarrelBack32x32.png" id="1_h2g4q"]
[ext_resource type="Script" uid="uid://cfe6gcclioctd" path="res://scripts/water_barrel.gd" id="1_o1smg"]
[ext_resource type="Texture2D" uid="uid://bryy7dkp7fftn" path="res://sprites/Barrel.png" id="2_mfqub"]
[ext_resource type="PackedScene" uid="uid://ckj2w2r14xiur" path="res://scenes/FX/point_smoke.tscn" id="3_82j84"]
[ext_resource type="Texture2D" uid="uid://0yixpgsicpqo" path="res://sprites/N_Barrel.png" id="4_3sf3w"]
[ext_resource type="Script" uid="uid://detdewkbqa1r2" path="res://scripts/particles.gd" id="5_u0vdu"]
[ext_resource type="AudioStream" uid="uid://cfjlbmnpqpvyf" path="res://audio/sfx/Boiling1.wav" id="6_83wg6"]

[sub_resource type="CanvasTexture" id="CanvasTexture_83wg6"]
diffuse_texture = ExtResource("2_mfqub")
normal_texture = ExtResource("4_3sf3w")

[sub_resource type="Curve" id="Curve_mfqub"]
_data = [Vector2(0, 0.5), 0.0, 0.0, 0, 0, Vector2(0.7, 0.9), 0.0, 0.0, 0, 0, Vector2(0.8, 0.5), 0.0, 0.0, 0, 0, Vector2(0.948529, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 5

[sub_resource type="CurveTexture" id="CurveTexture_82j84"]
curve = SubResource("Curve_mfqub")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_o1smg"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(8, 1, 1)
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
scale_min = 0.5
scale_curve = SubResource("CurveTexture_82j84")

[sub_resource type="Curve" id="Curve_o1smg"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.662921), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_3sf3w"]
curve = SubResource("Curve_o1smg")

[sub_resource type="Curve" id="Curve_83wg6"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.5), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_u0vdu"]
curve = SubResource("Curve_83wg6")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_qg48c"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(6, 1, 1)
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
angle_min = -45.0
angle_max = 45.0
direction = Vector3(0, -1, 0)
initial_velocity_max = 10.0
gravity = Vector3(0, -98, 0)
scale_max = 2.0
scale_curve = SubResource("CurveTexture_u0vdu")
color = Color(0.89059, 0.89059, 0.890591, 1)
alpha_curve = SubResource("CurveTexture_3sf3w")
turbulence_enabled = true
turbulence_noise_strength = 0.5
collision_use_scale = true

[sub_resource type="RectangleShape2D" id="RectangleShape2D_82j84"]
size = Vector2(14, 21)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_u0vdu"]
streams_count = 1
stream_0/stream = ExtResource("6_83wg6")

[node name="WaterBarrel" type="StaticBody2D"]
z_index = -1
script = ExtResource("1_o1smg")

[node name="Sprite2D2" type="Sprite2D" parent="."]
z_index = 1
texture = ExtResource("1_h2g4q")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 2
texture = SubResource("CanvasTexture_83wg6")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-8, -11, -12, -9, -12, 14, -10, 16, 10, 16, 12, 14, 12, -9, 8, -11, 8, 11, 6, 14, -6, 14, -8, 11)

[node name="Bubbles" type="GPUParticles2D" parent="."]
visible = false
modulate = Color(0.815819, 0.852294, 0.852151, 0.501961)
z_index = 1
position = Vector2(0, -5)
emitting = false
amount = 16
process_material = SubResource("ParticleProcessMaterial_o1smg")
script = ExtResource("5_u0vdu")

[node name="Steam" parent="." instance=ExtResource("3_82j84")]
z_index = 1
position = Vector2(0, -10)
emitting = false
amount = 15
lifetime = 1.0
process_material = SubResource("ParticleProcessMaterial_qg48c")

[node name="Area2D" type="Area2D" parent="." groups=["water"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_82j84")

[node name="BoilingAudio" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_u0vdu")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
